--- a/index.html
+++ b/index.html
@@ -13,14 +13,6 @@
   <meta property="og:description" content="기부보다 연결에 집중한 구조 플랫폼">
   <meta property="og:image" content="images/login_cat2.jpg">
   <link rel="icon" href="images/favicon.svg">
-  <style>
-    /* 카드 이미지 크기 통일 */
-    .project-card-img {
-      height: 200px;
-      object-fit: cover;
-      width: 100%;
-    }
-  </style>
 </head>
 <body class="bg-body">
   <header class="border-bottom bg-white sticky-top">
@@ -93,37 +85,23 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    // 홈 화면 프로젝트 카드 렌더링
-    document.addEventListener("DOMContentLoaded", () => {
-      const projects = JSON.parse(localStorage.getItem("projects")) || [];
-      const container = document.getElementById("home-projects");
+  <script src="app.min.js?v=v6-2025-08-11" defer></script>
 
-      if (projects.length === 0) {
-        container.innerHTML = `<p class="text-muted">아직 등록된 프로젝트가 없습니다.</p>`;
-        return;
-      }
-
-      projects.slice(0, 4).forEach(project => {
-        const col = document.createElement("div");
-        col.className = "col-md-6 col-lg-3";
-        col.innerHTML = `
-          <div class="card shadow-sm border-0 h-100">
-            <img src="${project.mainImage}" alt="${project.name}" class="project-card-img">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">${project.name}</h5>
-              <p class="card-text text-truncate">${project.description}</p>
-              <div class="d-flex justify-content-between small text-muted">
-                <span>목표: ${project.goalAmount}원</span>
-                <span>자기부담: ${project.selfAmount}원</span>
-              </div>
-              <a href="project.html?id=${project.id}" class="btn btn-outline-primary btn-sm w-100 mt-2">상세보기</a>
-            </div>
-          </div>
-        `;
-        container.appendChild(col);
-      });
-    });
-  </script>
+  <div id="pawToast" class="toast align-items-center text-bg-dark border-0" role="status" aria-live="polite" aria-atomic="true">
+    <div class="d-flex">
+      <div class="toast-body">완료되었습니다.</div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+  </div>
+  <!-- Lightbox Modal -->
+  <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content border-0 shadow-lg rounded-4">
+        <div class="modal-body p-0">
+          <img id="lightboxTarget" src="" alt="미리보기" class="w-100" style="object-fit:contain;max-height:80vh">
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
