--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta property="og:description" content="기부보다 연결에 집중한 구조 플랫폼">
   <meta property="og:image" content="images/login_cat2.jpg">
   <link rel="icon" href="images/favicon.svg">
+  <link rel="stylesheet" href="style_patch.css?v=2025-08-12">
 </head>
 <body class="bg-body">
   <header class="border-bottom bg-white sticky-top">
@@ -66,6 +67,18 @@
     </div>
   </section>
 
+  
+    <div class="alert alert-warning border-0 rounded-4 shadow-sm my-4">
+      <div class="d-flex align-items-start gap-3">
+        <i class="bi bi-megaphone-fill fs-4"></i>
+        <div>
+          <strong>Pilot Run 진행 중</strong><br>
+          결제(PG) 연동 전까지는 <u>카카오톡 단톡방</u>에서 프로젝트별 매칭으로 시범 운영합니다.<br>
+          참여를 원하시면 프로젝트 상세에서 안내된 카카오톡 링크로 들어오세요!
+        </div>
+      </div>
+    </div>
+
   <section class="container py-5">
     <div class="d-flex align-items-center justify-content-between mb-3">
       <h2 class="h4 fw-bold mb-0">진행중인 구조 프로젝트</h2>
@@ -103,5 +116,6 @@
       </div>
     </div>
   </div>
+  <script src="normalize.v8.2.js?v=2025-08-12" defer></script>
 </body>
 </html>
