--- a/project.html
+++ b/project.html
@@ -13,6 +13,7 @@
   <meta property="og:description" content="기부보다 연결에 집중한 구조 플랫폼">
   <meta property="og:image" content="images/login_cat2.jpg">
   <link rel="icon" href="images/favicon.svg">
+  <link rel="stylesheet" href="style_patch.css?v=2025-08-12">
 </head>
 <body class="bg-body">
   <header class="border-bottom bg-white sticky-top">
@@ -155,5 +156,6 @@
       </div>
     </div>
   </div>
+  <script src="normalize.v8.2.js?v=2025-08-12" defer></script>
 </body>
 </html>
