--- a/index.html
+++ b/index.html
@@ -117,5 +117,6 @@
     </div>
   </div>
   <script src="normalize.v8.2.js?v=2025-08-12" defer></script>
+  <script src="augment.v8.3.js?v=2025-08-12" defer></script>
 </body>
 </html>
