--- a/scripts/share_template.html
+++ b/scripts/share_template.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="ko">
 <head>
@@ -7,29 +8,42 @@
   <style>
     @font-face{font-family:"Poppins";src:url("../fonts/Poppins-700.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap}
     @font-face{font-family:"Noto Sans KR";src:url("../fonts/NotoSansKR-500.woff2") format("woff2");font-weight:500;font-style:normal;font-display:swap}
-    body{margin:0}
-    .wrap{width:1200px;height:630px;background:#fff;display:flex;flex-direction:column;font-family:"Noto Sans KR",sans-serif}
+    *{box-sizing:border-box} html,body{margin:0;padding:0}
+    .wrap{width:1200px;height:630px;display:flex;flex-direction:column;background:linear-gradient(135deg,#6552FF 0%,#5E7BFF 40%,#00B899 100%)}
+    .top{display:flex;gap:24px;padding:32px 40px;align-items:center}
+    .brand{display:flex;align-items:center;gap:12px;color:#fff}
+    .brand svg{height:36px}
+    .brand-title{font:700 28px "Poppins","Noto Sans KR",sans-serif;letter-spacing:.2px}
+    .card{flex:1;background:#fff;border-top-left-radius:24px;border-top-right-radius:24px;overflow:hidden;display:flex;flex-direction:column}
     .img{height:350px;background:#eef1f7;display:flex;align-items:center;justify-content:center;overflow:hidden}
     .img img{width:100%;height:100%;object-fit:cover}
-    .content{padding:32px 48px}
+    .content{padding:28px 40px}
     .title{font:700 44px "Poppins","Noto Sans KR",sans-serif;color:#1b1f27;letter-spacing:-.02em;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
     .desc{margin-top:6px;font:500 22px "Noto Sans KR",sans-serif;color:#667085;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
     .bar{margin-top:16px;height:16px;background:#e5e7ef;border-radius:10px;overflow:hidden}
     .bar > div{height:100%;background:#6552FF;width:0}
-    .foot{display:flex;justify-content:space-between;align-items:center;margin-top:24px}
-    .brand{font:700 28px "Poppins";color:#6552FF}
+    .foot{display:flex;justify-content:space-between;align-items:center;margin-top:20px}
+    .stat{font:600 26px 'Poppins','Noto Sans KR',sans-serif;color:#1b1f27}
   </style>
 </head>
 <body>
-  <div class="wrap" id="wrap">
-    <div class="img"><img id="photo" src=""></div>
-    <div class="content">
-      <div class="title" id="title"></div>
-      <div class="desc" id="desc"></div>
-      <div class="bar"><div id="barInner"></div></div>
-      <div class="foot">
-        <div class="brand">Project.PAW</div>
-        <div id="stat" style="font:600 26px 'Poppins','Noto Sans KR',sans-serif;color:#1b1f27"></div>
+  <div class="wrap">
+    <div class="top">
+      <div class="brand">
+        <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1"><stop stop-color="#fff"/><stop offset="1" stop-color="#d6f5ec"/></linearGradient></defs><rect rx="12" width="64" height="64" fill="url(#g)"/><circle cx="22" cy="22" r="7" fill="#6552FF"/><circle cx="36" cy="18" r="5" fill="#6552FF"/><circle cx="42" cy="30" r="6" fill="#6552FF"/><circle cx="28" cy="32" r="5" fill="#6552FF"/><path d="M20 42c6-6 17-6 23 0 3 3 1 8-3 9-6 1-11 1-17 0-4-1-6-6-3-9z" fill="#6552FF"/></svg>
+        <div class="brand-title">Project.PAW</div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="img"><img id="photo" src=""></div>
+      <div class="content">
+        <div class="title" id="title"></div>
+        <div class="desc" id="desc"></div>
+        <div class="bar"><div id="barInner"></div></div>
+        <div class="foot">
+          <div></div>
+          <div class="stat" id="stat"></div>
+        </div>
       </div>
     </div>
   </div>
@@ -46,7 +60,6 @@
     document.getElementById('photo').src = img;
     document.getElementById('barInner').style.width = pr + '%';
     document.getElementById('stat').textContent = pr + '% 달성 · ₩' + new Intl.NumberFormat('ko-KR').format(cur);
-    // small delay so fonts/images settle before screenshot
     window.onload = () => setTimeout(()=>document.title="ready", 300);
   </script>
 </body>
