--- a/create.html
+++ b/create.html
@@ -1,130 +1,110 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project.PAW - 등록</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link href="app.min.css?v=v6-2025-08-11" rel="stylesheet">
-  <meta name="theme-color" content="#6552FF">
-  <meta property="og:title" content="Project.PAW">
-  <meta property="og:description" content="기부보다 연결에 집중한 구조 플랫폼">
-  <meta property="og:image" content="images/login_cat2.jpg">
-  <link rel="icon" href="images/favicon.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>후원 등록 · Project.PAW</title>
+  <link rel="stylesheet" href="css/app.css" />
 </head>
-<body class="bg-body">
-  <header class="border-bottom bg-white sticky-top">
-    <nav class="container navbar navbar-expand-lg py-3">
-      <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.html"><img src="images/logo_wordmark.svg" alt="Project.PAW" height="24"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="nav">
-        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-2">
-          <li class="nav-item"><a class="nav-link" href="project_list.html">후원하기</a></li>
-          <li class="nav-item"><a class="nav-link" href="create.html">후원 등록</a></li>
-          <li class="nav-item"><a class="btn btn-primary px-3" href="project_list.html"><i class="bi bi-heart-fill me-1"></i>지금 돕기</a></li>
-        </ul>
-        <a id="navDash" class="btn btn-outline-secondary ms-lg-3 d-none" href="dashboard.html">대시보드</a>
-      </div>
-    </nav>
-  </header>
+<body>
+  <nav class="nav">
+    <div class="container">
+      <div class="brand"><a href="index.html">Project<span class="dot">.PAW</span></a></div>
+      <ul>
+        <li><a href="index.html">홈</a></li>
+        <li><a href="project_list.html">후원하기</a></li>
+        <li><a href="create.html" class="btn">후원 등록</a></li>
+      </ul>
+    </div>
+  </nav>
+  <main class="container">
+  <section class="section">
+    <h2>후원 등록</h2>
+    <p style="color:#445;">실제 사례만 등록해주세요. <b>구조자 30% 자부담</b>과 <b>영수증/후기 공개</b>가 원칙입니다.</p>
 
-  <section class="container py-5">
-    <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <div class="card shadow-sm border-0 rounded-4">
-          <div class="card-body p-4 p-lg-5">
-            <h1 class="h3 fw-bold mb-3">후원 등록</h1>
-            <p class="text-secondary mb-4">대표사진과 상황 사진을 등록하면 홈/후원하기에 즉시 반영됩니다. 초기는 <span class="badge bg-warning-subtle text-warning">대기</span> 상태로 등록돼요.</p>
-            <form id="createForm" class="vstack gap-3" enctype="multipart/form-data">
-              <div>
-                <label class="form-label">이름</label>
-                <input type="text" class="form-control" id="name" required>
-              </div>
-              <div>
-                <label class="form-label">상황 설명</label>
-                <textarea class="form-control" id="description" rows="4" required placeholder="구체적이고 진솔하게 적어주세요."></textarea>
-              </div>
-              <div class="row g-3">
-                <div class="col-md-4">
-                  <label class="form-label">목표 금액 (원)</label>
-                  <input type="number" class="form-control" id="goalAmount" min="0" required>
-                </div>
-                <div class="col-md-4">
-                  <label class="form-label">현재 모금액 (원)</label>
-                  <input type="number" class="form-control" id="currentAmount" min="0" value="0">
-                </div>
-                <div class="col-md-4">
-                  <label class="form-label">구조자 부담액 30% (원)</label>
-                  <input type="number" class="form-control" id="ownerAmount" min="0" required>
-                </div>
-              </div>
-              <div class="row g-3">
-                <div class="col-md-6">
-                  <label class="form-label">카카오톡 링크</label>
-                  <input type="url" class="form-control" id="kakaoLink" placeholder="https://open.kakao.com/...">
-                </div>
-                <div class="col-md-6">
-                  <label class="form-label">상태</label>
-                  <select id="status" class="form-select">
-                    <option value="pending" selected>대기</option>
-                    <option value="approved">승인됨</option>
-                  </select>
-                </div>
-              </div>
-              <div>
-                <label class="form-label">대표 사진</label>
-                <input type="file" class="form-control" id="imageMain" accept="image/*" required>
-                <div id="previewMain" class="mt-2 small text-secondary">미리보기 없음</div>
-              </div>
-              <div>
-                <label class="form-label">상황 사진 (여러 장 가능)</label>
-                <input type="file" class="form-control" id="imageGallery" accept="image/*" multiple>
-                <div id="previewGallery" class="mt-2 d-flex flex-wrap gap-2"></div>
-              </div>
-              <div class="d-flex gap-2 mt-2">
-                <button class="btn btn-primary btn-lg flex-grow-1" type="submit"><i class="bi bi-upload me-1"></i>등록하기</button>
-                <a class="btn btn-outline-secondary" href="index.html">홈으로</a>
-              </div>
-            </form>
-          </div>
+    <div class="form">
+      <label class="title">프로젝트명 / 고양이 이름</label>
+      <input id="title" class="input" placeholder="예: 나비 – 교통사고 치료비" />
+
+      <label class="title">상황 요약 (한 줄)</label>
+      <input id="summary" class="input" placeholder="예: 수술비 60만원 중 40만원 모금 요청" />
+
+      <label class="title">상세 설명</label>
+      <textarea id="description" placeholder="상세 상황과 필요한 치료/비용을 적어주세요. 후기 공개를 약속합니다."></textarea>
+
+      <div class="grid-2">
+        <div>
+          <label class="title">목표 금액 (원)</label>
+          <input id="target" type="number" class="input" placeholder="예: 400000" />
         </div>
+        <div>
+          <label class="title">구조자 부담금 (원)</label>
+          <input id="selfpay" type="number" class="input" placeholder="예: 200000" />
+        </div>
+      </div>
+
+      <label class="title">카카오톡 연결 링크</label>
+      <input id="kakao" class="input" placeholder="https://open.kakao.com/o/..." />
+
+      <div class="switch">
+        <input id="status" type="checkbox">
+        <span>관리자 승인</span>
+      </div>
+
+      <label class="title">대표 이미지</label>
+      <input id="cover" type="file" accept="image/*" class="input"/>
+      <div class="img-preview"><img id="coverPreview" alt="대표 미리보기" /></div>
+
+      <label class="title">상황 사진 (여러 장)</label>
+      <input id="gallery" type="file" accept="image/*" multiple class="input"/>
+      <div class="gallery-preview grid"></div>
+
+      <label class="title">영수증 사진 (여러 장)</label>
+      <input id="receipts" type="file" accept="image/*" multiple class="input"/>
+      <div class="receipt-preview grid"></div>
+
+      <div>
+        <button id="saveBtn" class="btn primary">등록하기</button>
       </div>
     </div>
   </section>
 
-  <footer class="border-top mt-5 py-4">
-    <div class="container small text-muted d-flex flex-wrap justify-content-between gap-2">
-      <div>© 2025 Project.PAW · 도움은 본능, 연결은 선택</div>
-      <div class="d-flex gap-3">
-        <a class="link-secondary text-decoration-none" href="about.html">About</a>
-        <a class="link-secondary text-decoration-none" href="login.html">Login</a>
-      </div>
+  <script type="module">
+    import { SCHEMA, storage, uid } from "./js/app.js";
+    import "./js/uploader.js";
+
+    document.querySelector("#saveBtn").addEventListener("click", (e) => {
+      e.preventDefault();
+      const data = structuredClone(SCHEMA);
+      data.id = uid();
+      data.title = document.querySelector("#title").value.trim();
+      data.summary = document.querySelector("#summary").value.trim();
+      data.description = document.querySelector("#description").value.trim();
+      data.targetAmount = Number(document.querySelector("#target").value || 0);
+      data.selfPayAmount = Number(document.querySelector("#selfpay").value || 0);
+      data.kakaoLink = document.querySelector("#kakao").value.trim();
+      data.status = document.querySelector("#status").checked ? "approved" : "pending";
+      const coverEl = document.querySelector("#coverPreview");
+      data.images.cover = coverEl?.dataset?.src || "";
+      data.images.gallery = [...document.querySelectorAll(".gallery-preview img")].map(img => img.dataset.src);
+      data.images.receipts = [...document.querySelectorAll(".receipt-preview img")].map(img => img.dataset.src);
+      data.createdAt = Date.now();
+
+      if (!data.title || !data.summary) {
+        alert("프로젝트명과 요약을 입력해주세요.");
+        return;
+      }
+      storage.add(data);
+      alert("등록 완료! 홈으로 이동합니다.");
+      location.href = "index.html";
+    });
+  </script>
+
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <small>Project.PAW — “도움은 본능, 연결은 선택.” 100% 전달 · 책임 구조 · 직접 연결</small>
     </div>
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="create.js?v=v3"></script>
-
-  <div id="pawToast" class="toast align-items-center text-bg-dark border-0" role="status" aria-live="polite" aria-atomic="true">
-    <div class="d-flex">
-      <div class="toast-body">완료되었습니다.</div>
-      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-  </div>
-  <!-- Lightbox Modal -->
-  <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-      <div class="modal-content border-0 shadow-lg rounded-4">
-        <div class="modal-body p-0">
-          <img id="lightboxTarget" src="" alt="미리보기" class="w-100" style="object-fit:contain;max-height:80vh">
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="augment.v8.3.js?v=2025-08-12" defer></script>
 </body>
 </html>
