--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>홈 · Project.PAW</title>
+<meta name="description" content="Project.PAW — 도움은 본능, 연결은 선택. 100% 전달, 책임 기반 구조의 직접 연결 플랫폼." />
+<link rel="icon" href="img/placeholder.svg" />
+
   <link rel="stylesheet" href="css/app.css" />
 </head>
 <body>
