--- a/project.html
+++ b/project.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>프로젝트 상세 · Project.PAW</title>
+<meta name="description" content="프로젝트 상세 정보, 갤러리, 영수증, 그리고 직접 연결 안내를 확인하세요." />
+<link rel="icon" href="img/placeholder.svg" />
+
   <link rel="stylesheet" href="css/app.css" />
 </head>
 <body>
@@ -23,7 +26,7 @@
     <h1 class="project-title"></h1>
     <p class="project-summary"></p>
     <p class="project-money"></p>
-    <div class="fixed-actions">
+    <div class="fixed-actions sticky-cta">
       <a id="kakaoBtn" class="btn primary hidden" target="_blank" rel="noopener">카카오톡으로 연결</a>
     </div>
   </section>
