--- a/project_list.html
+++ b/project_list.html
@@ -34,6 +34,7 @@
   </section>
 
   <script type="module">
+    import "./js/firebase.js";
     import { storage, fmt } from "./js/app.js";
     import { percent, esc } from "./js/utils.js";
     const wrap = document.querySelector("#list");
