--- a/create.html
+++ b/create.html
@@ -1,140 +1,142 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Project.PAW — 후원 등록</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>후원 등록 · Project.PAW</title>
+  <meta name="description" content="책임 기반 구조 원칙에 따라 프로젝트를 등록해주세요. 대표/상황/영수증 사진과 카카오 링크를 포함할 수 있습니다." />
+  <link rel="icon" href="img/placeholder.svg" />
   <link rel="stylesheet" href="css/app.css" />
-  <meta name="description" content="Project.PAW 프로젝트 등록" />
-  <link rel="icon" href="img/favicon.ico" />
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <a href="index.html" class="logo">Project.<strong>PAW</strong></a>
-      <ul class="nav-links">
+  <nav class="nav">
+    <div class="container">
+      <div class="brand"><a href="index.html">Project<span class="dot">.PAW</span></a></div>
+      <ul>
         <li><a href="index.html">홈</a></li>
         <li><a href="project_list.html">후원하기</a></li>
-        <li><a href="create.html" class="active">후원 등록</a></li>
+        <li><a href="create.html" class="btn">후원 등록</a></li>
       </ul>
-    </nav>
-  </header>
+    </div>
+  </nav>
 
   <main class="container">
-    <h1>후원 등록</h1>
+    <section class="section">
+      <h2>후원 등록</h2>
+      <p style="color:#445;">실제 사례만 등록해주세요. <b>구조자 30% 자부담</b>과 <b>영수증/후기 공개</b>가 원칙입니다.</p>
 
-    <form id="createForm" class="form">
-      <label>프로젝트 제목
-        <input id="title" type="text" placeholder="예) 병원비가 급한 콩이" required />
-      </label>
+      <div class="form">
+        <label class="title">프로젝트명 / 고양이 이름</label>
+        <input id="title" class="input" placeholder="예: 나비 – 교통사고 치료비" />
 
-      <label>요약 설명
-        <input id="summary" type="text" placeholder="한 줄 요약을 적어주세요" required />
-      </label>
+        <label class="title">상황 요약 (한 줄)</label>
+        <input id="summary" class="input" placeholder="예: 수술비 60만원 중 40만원 모금 요청" />
 
-      <label>상세 설명
-        <textarea id="description" rows="6" placeholder="상세한 상황을 적어주세요"></textarea>
-      </label>
+        <label class="title">상세 설명</label>
+        <textarea id="description" placeholder="상세 상황과 필요한 치료/비용을 적어주세요. 후기 공개를 약속합니다."></textarea>
 
-      <label>목표 금액
-        <input id="target" type="number" min="0" step="1000" placeholder="1000000" />
-      </label>
+        <div class="grid-2">
+          <div>
+            <label class="title">목표 금액 (원)</label>
+            <input id="target" type="number" class="input" placeholder="예: 400000" />
+          </div>
+          <div>
+            <label class="title">구조자 부담금 (원)</label>
+            <input id="selfpay" type="number" class="input" placeholder="예: 200000" />
+          </div>
+        </div>
 
-      <label>자부담 금액
-        <input id="selfpay" type="number" min="0" step="1000" placeholder="300000" />
-      </label>
+        <label class="title">카카오톡 연결 링크</label>
+        <input id="kakao" class="input" placeholder="https://open.kakao.com/o/..." />
 
-      <label>카카오톡 링크
-        <input id="kakao" type="url" placeholder="https://open.kakao.com/..." />
-      </label>
+        <div class="switch">
+          <input id="status" type="checkbox">
+          <span>관리자 승인</span>
+        </div>
 
-      <label class="checkbox">
-        <input id="status" type="checkbox" />
-        <span>관리자 승인(노출 허용)</span>
-      </label>
+        <label class="title">대표 이미지</label>
+        <input id="cover" type="file" accept="image/*" class="input"/>
+        <div class="img-preview"><img id="coverPreview" alt="대표 미리보기" /></div>
 
-      <label>대표 이미지
-        <input id="cover" type="file" accept="image/*" />
-      </label>
+        <label class="title">상황 사진 (여러 장)</label>
+        <input id="gallery" type="file" accept="image/*" multiple class="input"/>
+        <div class="gallery-preview grid"></div>
 
-      <label>상황 사진 (여러 장)
-        <input id="gallery" type="file" accept="image/*" multiple />
-      </label>
+        <label class="title">영수증 사진 (여러 장)</label>
+        <input id="receipts" type="file" accept="image/*" multiple class="input"/>
+        <div class="receipt-preview grid"></div>
 
-      <label>영수증 사진 (여러 장)
-        <input id="receipts" type="file" accept="image/*" multiple />
-      </label>
+        <div>
+          <button id="saveBtn" class="btn primary">등록하기</button>
+        </div>
+      </div>
+    </section>
 
-      <button id="saveBtn" type="button" class="btn primary">등록하기</button>
-    </form>
+    <!-- ✅ 수정된 스크립트 -->
+    <script type="module">
+      import { SCHEMA, storage as dbStorage, uid } from "./js/app.js";
+      import { toast } from "./js/utils.js";
+      import "./js/uploader.js";
+      import { uploadFile } from "./js/uploader.js";
+      import { authReady, auth } from "./js/firebase.js";
+
+      const $ = s => document.querySelector(s);
+
+      $("#saveBtn").addEventListener("click", async (e) => {
+        e.preventDefault();
+
+        // ✅ 익명 로그인 완료까지 대기
+        await authReady;
+        console.log("[auth] currentUser:", auth.currentUser?.uid);
+
+        const data = structuredClone(SCHEMA);
+        data.id = uid();
+        data.title = $("#title").value.trim();
+        data.summary = $("#summary").value.trim();
+        data.description = $("#description").value.trim();
+        data.targetAmount = Number($("#target").value || 0);
+        data.selfPayAmount = Number($("#selfpay").value || 0);
+        data.kakaoLink = $("#kakao").value.trim();
+        data.status = $("#status").checked ? "approved" : "pending";
+        data.createdAt = Date.now();
+
+        if (!data.title || !data.summary) {
+          toast("프로젝트명과 요약을 입력해주세요."); 
+          return;
+        }
+
+        const coverFile = $("#cover")?.files?.[0];
+        const galleryFiles = Array.from($("#gallery")?.files || []);
+        const receiptFiles = Array.from($("#receipts")?.files || []);
+
+        try {
+          if (coverFile) data.images.cover = await uploadFile("covers", coverFile);
+          data.images.gallery = [];
+          for (const f of galleryFiles) data.images.gallery.push(await uploadFile("gallery", f));
+          data.images.receipts = [];
+          for (const f of receiptFiles) data.images.receipts.push(await uploadFile("receipts", f));
+        } catch (err) {
+          console.error(err);
+          toast("이미지 업로드 실패. 다시 시도해주세요.");
+          return;
+        }
+
+        try {
+          await dbStorage.add(data);
+          toast("등록 완료! 홈으로 이동합니다.");
+          location.href = "index.html";
+        } catch (err) {
+          console.error(err);
+          toast("등록 실패. 잠시 후 다시 시도해주세요.");
+        }
+      });
+    </script>
   </main>
 
-  <footer>
-    <small>Project.<strong>PAW</strong> — 도움은 본능, 연결은 선택.</small>
+  <footer class="footer">
+    <div class="container">
+      <small>Project.PAW — “도움은 본능, 연결은 선택.” 100% 전달 · 책임 구조 · 직접 연결</small>
+    </div>
   </footer>
-
-  <!-- ✅ 수정된 스크립트 -->
-  <script type="module">
-    import { SCHEMA, storage as dbStorage, uid } from "./js/app.js";
-    import { toast } from "./js/utils.js";
-    import { uploadFile } from "./js/uploader.js";
-    import { authReady, auth } from "./js/firebase.js";
-
-    const $ = (s) => document.querySelector(s);
-
-    // 등록 버튼 이벤트
-    $("#saveBtn").addEventListener("click", async (e) => {
-      e.preventDefault();
-
-      // ✅ 업로드/쓰기 전에 인증 완료 기다림
-      await authReady;
-      console.log("[auth] currentUser:", auth.currentUser?.uid);
-
-      const data = structuredClone(SCHEMA);
-      data.id = uid();
-      data.title = $("#title").value.trim();
-      data.summary = $("#summary").value.trim();
-      data.description = $("#description").value.trim();
-      data.targetAmount = Number($("#target").value || 0);
-      data.selfPayAmount = Number($("#selfpay").value || 0);
-      data.kakaoLink = $("#kakao").value.trim();
-      data.status = $("#status").checked ? "approved" : "pending";
-      data.createdAt = Date.now();
-
-      if (!data.title || !data.summary) {
-        toast("프로젝트명과 요약을 입력해주세요.");
-        return;
-      }
-
-      const coverFile = $("#cover")?.files?.[0];
-      const galleryFiles = Array.from($("#gallery")?.files || []);
-      const receiptFiles = Array.from($("#receipts")?.files || []);
-
-      try {
-        if (coverFile) data.images.cover = await uploadFile("covers", coverFile);
-        data.images.gallery = [];
-        for (const f of galleryFiles) {
-          data.images.gallery.push(await uploadFile("gallery", f));
-        }
-        data.images.receipts = [];
-        for (const f of receiptFiles) {
-          data.images.receipts.push(await uploadFile("receipts", f));
-        }
-      } catch (err) {
-        console.error("[upload] failed:", err);
-        toast("이미지 업로드 실패(네트워크/권한). 다시 시도해주세요.");
-        return;
-      }
-
-      try {
-        await dbStorage.add(data);
-        toast("등록 완료! 홈으로 이동합니다.");
-        location.href = "index.html";
-      } catch (err) {
-        console.error("[firestore] write failed:", err);
-        toast("등록 실패(데이터 저장). 잠시 후 다시 시도해주세요.");
-      }
-    });
-  </script>
 </body>
 </html>
